# synapse-invite-policies

./: CODEOWNERS  README.md  pyproject.toml
synapse_invite_policies/: __init__.py  invite_policies.py
tests/: __init__.py  test_simple.py
